src/fandango/converters/antlr/ANTLRv4Parser.py
# Generated from ANTLRv4Parser.g4 by ANTLR 4.13.2
# encoding: utf-8
import sys

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class ANTLRv4Parser(Parser):
    grammarFileName = "ANTLRv4Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'='",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'['",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'import'",
        "'fragment'",
        "'lexer'",
        "'parser'",
        "'grammar'",
        "'protected'",
        "'public'",
        "'private'",
        "'returns'",
        "'locals'",
        "'throws'",
        "'catch'",
        "'finally'",
        "'mode'",
        "':'",
        "'::'",
        "','",
        "';'",
        "'('",
        "')'",
        "'}'",
        "'->'",
        "'<'",
        "'>'",
        "'?'",
        "'*'",
        "'+='",
        "'+'",
        "'|'",
        "'$'",
        "'..'",
        "'.'",
        "'@'",
        "'#'",
        "'~'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "ACTION",
        "ARG_ACTION",
        "ARG_OR_CHARSET",
        "ASSIGN",
        "LEXER_CHAR_SET",
        "RULE_REF",
        "SEMPRED",
        "STRING_LITERAL",
        "<INVALID>",
        "TOKEN_REF",
        "UNICODE_ESC",
        "UNICODE_EXTENDED_ESC",
        "WS",
        "ALT",
        "BLOCK",
        "CLOSURE",
        "ELEMENT_OPTIONS",
        "EPSILON",
        "LEXER_ACTION_CALL",
        "LEXER_ALT_ACTION",
        "OPTIONAL",
        "POSITIVE_CLOSURE",
        "RULE",
        "RULEMODIFIERS",
        "RULES",
        "SET",
        "WILDCARD",
        "DOC_COMMENT",
        "BLOCK_COMMENT",
        "LINE_COMMENT",
        "INT",
        "UNTERMINATED_STRING_LITERAL",
        "BEGIN_ARGUMENT",
        "OPTIONS",
        "TOKENS",
        "CHANNELS",
        "IMPORT",
        "FRAGMENT",
        "LEXER",
        "PARSER",
        "GRAMMAR",
        "PROTECTED",
        "PUBLIC",
        "PRIVATE",
        "RETURNS",
        "LOCALS",
        "THROWS",
        "CATCH",
        "FINALLY",
        "MODE",
        "COLON",
        "COLONCOLON",
        "COMMA",
        "SEMI",
        "LPAREN",
        "RPAREN",
        "RBRACE",
        "RARROW",
        "LT",
        "GT",
        "QUESTION",
        "STAR",
        "PLUS_ASSIGN",
        "PLUS",
        "OR",
        "DOLLAR",
        "RANGE",
        "DOT",
        "AT",
        "POUND",
        "NOT",
        "ID",
        "END_ARGUMENT",
        "UNTERMINATED_ARGUMENT",
        "ARGUMENT_CONTENT",
        "UNTERMINATED_CHAR_SET",
    ]

    RULE_grammarSpec = 0
    RULE_grammarDecl = 1
    RULE_grammarType = 2
    RULE_prequelConstruct = 3
    RULE_optionsSpec = 4
    RULE_option = 5
    RULE_optionValue = 6
    RULE_delegateGrammars = 7
    RULE_delegateGrammar = 8
    RULE_tokensSpec = 9
    RULE_channelsSpec = 10
    RULE_idList = 11
    RULE_action_ = 12
    RULE_actionScopeName = 13
    RULE_actionBlock = 14
    RULE_argActionBlock = 15
    RULE_modeSpec = 16
    RULE_rules = 17
    RULE_ruleSpec = 18
    RULE_parserRuleSpec = 19
    RULE_exceptionGroup = 20
    RULE_exceptionHandler = 21
    RULE_finallyClause = 22
    RULE_rulePrequel = 23
    RULE_ruleReturns = 24
    RULE_throwsSpec = 25
    RULE_localsSpec = 26
    RULE_ruleAction = 27
    RULE_ruleModifiers = 28
    RULE_ruleModifier = 29
    RULE_ruleBlock = 30
    RULE_ruleAltList = 31
    RULE_labeledAlt = 32
    RULE_lexerRuleSpec = 33
    RULE_lexerRuleBlock = 34
    RULE_lexerAltList = 35
    RULE_lexerAlt = 36
    RULE_lexerElements = 37
    RULE_lexerElement = 38
    RULE_lexerBlock = 39
    RULE_lexerCommands = 40
    RULE_lexerCommand = 41
    RULE_lexerCommandName = 42
    RULE_lexerCommandExpr = 43
    RULE_altList = 44
    RULE_alternative = 45
    RULE_element = 46
    RULE_predicateOptions = 47
    RULE_predicateOption = 48
    RULE_labeledElement = 49
    RULE_ebnf = 50
    RULE_blockSuffix = 51
    RULE_ebnfSuffix = 52
    RULE_lexerAtom = 53
    RULE_atom = 54
    RULE_wildcard = 55
    RULE_notSet = 56
    RULE_blockSet = 57
    RULE_setElement = 58
    RULE_block = 59
    RULE_ruleref = 60
    RULE_characterRange = 61
    RULE_terminalDef = 62
    RULE_elementOptions = 63
    RULE_elementOption = 64
    RULE_identifier = 65
    RULE_qualifiedIdentifier = 66

    ruleNames = [
        "grammarSpec",
        "grammarDecl",
        "grammarType",
        "prequelConstruct",
        "optionsSpec",
        "option",
        "optionValue",
        "delegateGrammars",
        "delegateGrammar",
        "tokensSpec",
        "channelsSpec",
        "idList",
        "action_",
        "actionScopeName",
        "actionBlock",
        "argActionBlock",
        "modeSpec",
        "rules",
        "ruleSpec",
        "parserRuleSpec",
        "exceptionGroup",
        "exceptionHandler",
        "finallyClause",
        "rulePrequel",
        "ruleReturns",
        "throwsSpec",
        "localsSpec",
        "ruleAction",
        "ruleModifiers",
        "ruleModifier",
        "ruleBlock",
        "ruleAltList",
        "labeledAlt",
        "lexerRuleSpec",
        "lexerRuleBlock",
        "lexerAltList",
        "lexerAlt",
        "lexerElements",
        "lexerElement",
        "lexerBlock",
        "lexerCommands",
        "lexerCommand",
        "lexerCommandName",
        "lexerCommandExpr",
        "altList",
        "alternative",
        "element",
        "predicateOptions",
        "predicateOption",
        "labeledElement",
        "ebnf",
        "blockSuffix",
        "ebnfSuffix",
        "lexerAtom",
        "atom",
        "wildcard",
        "notSet",
        "blockSet",
        "setElement",
        "block",
        "ruleref",
        "characterRange",
        "terminalDef",
        "elementOptions",
        "elementOption",
        "identifier",
        "qualifiedIdentifier",
    ]

    EOF = Token.EOF
    ACTION = 4
    ARG_ACTION = 5
    ARG_OR_CHARSET = 6
    ASSIGN = 7
    LEXER_CHAR_SET = 8
    RULE_REF = 9
    SEMPRED = 10
    STRING_LITERAL = 11
    TOKEN_REF = 13
    UNICODE_ESC = 14
    UNICODE_EXTENDED_ESC = 15
    WS = 16
    ALT = 17
    BLOCK = 18
    CLOSURE = 19
    ELEMENT_OPTIONS = 20
    EPSILON = 21
    LEXER_ACTION_CALL = 22
    LEXER_ALT_ACTION = 23
    OPTIONAL = 24
    POSITIVE_CLOSURE = 25
    RULE = 26
    RULEMODIFIERS = 27
    RULES = 28
    SET = 29
    WILDCARD = 30
    DOC_COMMENT = 31
    BLOCK_COMMENT = 32
    LINE_COMMENT = 33
    INT = 34
    UNTERMINATED_STRING_LITERAL = 35
    BEGIN_ARGUMENT = 36
    OPTIONS = 37
    TOKENS = 38
    CHANNELS = 39
    IMPORT = 40
    FRAGMENT = 41
    LEXER = 42
    PARSER = 43
    GRAMMAR = 44
    PROTECTED = 45
    PUBLIC = 46
    PRIVATE = 47
    RETURNS = 48
    LOCALS = 49
    THROWS = 50
    CATCH = 51
    FINALLY = 52
    MODE = 53
    COLON = 54
    COLONCOLON = 55
    COMMA = 56
    SEMI = 57
    LPAREN = 58
    RPAREN = 59
    RBRACE = 60
    RARROW = 61
    LT = 62
    GT = 63
    QUESTION = 64
    STAR = 65
    PLUS_ASSIGN = 66
    PLUS = 67
    OR = 68
    DOLLAR = 69
    RANGE = 70
    DOT = 71
    AT = 72
    POUND = 73
    NOT = 74
    ID = 75
    END_ARGUMENT = 76
    UNTERMINATED_ARGUMENT = 77
    ARGUMENT_CONTENT = 78
    UNTERMINATED_CHAR_SET = 79

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class GrammarSpecContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def grammarDecl(self):
            return self.getTypedRuleContext(ANTLRv4Parser.GrammarDeclContext, 0)

        def rules(self):
            return self.getTypedRuleContext(ANTLRv4Parser.RulesContext, 0)

        def EOF(self):
            return self.getToken(ANTLRv4Parser.EOF, 0)

        def prequelConstruct(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ANTLRv4Parser.PrequelConstructContext)
            else:
                return self.getTypedRuleContext(
                    ANTLRv4Parser.PrequelConstructContext, i
                )

        def modeSpec(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ANTLRv4Parser.ModeSpecContext)
            else:
                return self.getTypedRuleContext(ANTLRv4Parser.ModeSpecContext, i)

        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_grammarSpec

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGrammarSpec"):
                return visitor.visitGrammarSpec(self)
            else:
                return visitor.visitChildren(self)

    def grammarSpec(self):

        localctx = ANTLRv4Parser.GrammarSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_grammarSpec)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.grammarDecl()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la - 37) & ~0x3F) == 0 and ((1 << (_la - 37)) & 34359738383) != 0:
                self.state = 135
                self.prequelConstruct()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self.rules()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 53:
                self.state = 142
                self.modeSpec()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self.match(ANTLRv4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GrammarDeclContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def grammarType(self):
            return self.getTypedRuleContext(ANTLRv4Parser.GrammarTypeContext, 0)

        def identifier(self):
            return self.getTypedRuleContext(ANTLRv4Parser.IdentifierContext, 0)

        def SEMI(self):
            return self.getToken(ANTLRv4Parser.SEMI, 0)

        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_grammarDecl

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGrammarDecl"):
                return visitor.visitGrammarDecl(self)
            else:
                return visitor.visitChildren(self)

    def grammarDecl(self):

        localctx = ANTLRv4Parser.GrammarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_grammarDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.grammarType()
            self.state = 151
            self.identifier()
            self.state = 152
            self.match(ANTLRv4Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GrammarTypeContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEXER(self):
            return self.getToken(ANTLRv4Parser.LEXER, 0)

        def GRAMMAR(self):
            return self.getToken(ANTLRv4Parser.GRAMMAR, 0)

        def PARSER(self):
            return self.getToken(ANTLRv4Parser.PARSER, 0)

        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_grammarType

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGrammarType"):
                return visitor.visitGrammarType(self)
            else:
                return visitor.visitChildren(self)

    def grammarType(self):

        localctx = ANTLRv4Parser.GrammarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_grammarType)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(ANTLRv4Parser.LEXER)
                self.state = 155
                self.match(ANTLRv4Parser.GRAMMAR)
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(ANTLRv4Parser.PARSER)
                self.state = 157
                self.match(ANTLRv4Parser.GRAMMAR)
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 3)
                self.state = 158
                self.match(ANTLRv4Parser.GRAMMAR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrequelConstructContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def optionsSpec(self):
            return self.getTypedRuleContext(ANTLRv4Parser.OptionsSpecContext, 0)

        def delegateGrammars(self):
            return self.getTypedRuleContext(ANTLRv4Parser.DelegateGrammarsContext, 0)

        def tokensSpec(self):
            return self.getTypedRuleContext(ANTLRv4Parser.TokensSpecContext, 0)

        def channelsSpec(self):
            return self.getTypedRuleContext(ANTLRv4Parser.ChannelsSpecContext, 0)

        def action_(self):
            return self.getTypedRuleContext(ANTLRv4Parser.Action_Context, 0)

        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_prequelConstruct

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPrequelConstruct"):
                return visitor.visitPrequelConstruct(self)
            else:
                return visitor.visitChildren(self)

    def prequelConstruct(self):

        localctx = ANTLRv4Parser.PrequelConstructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_prequelConstruct)
        try:
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [37]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.optionsSpec()
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.delegateGrammars()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.tokensSpec()
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 4)
                self.state = 164
                self.channelsSpec()
                pass
            elif token in [72]:
                self.enterOuterAlt(localctx, 5)
                self.state = 165
                self.action_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OptionsSpecContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPTIONS(self):
            return self.getToken(ANTLRv4Parser.OPTIONS, 0)

        def RBRACE(self):
            return self.getToken(ANTLRv4Parser.RBRACE, 0)

        def option(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ANTLRv4Parser.OptionContext)
            else:
                return self.getTypedRuleContext(ANTLRv4Parser.OptionContext, i)

        def SEMI(self, i: int = None):
            if i is None:
                return self.getTokens(ANTLRv4Parser.SEMI)
            else:
                return self.getToken(ANTLRv4Parser.SEMI, i)

        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_optionsSpec

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOptionsSpec"):
                return visitor.visitOptionsSpec(self)
            else:
                return visitor.visitChildren(self)

    def optionsSpec(self):

        localctx = ANTLRv4Parser.OptionsSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_optionsSpec)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(ANTLRv4Parser.OPTIONS)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 9 or _la == 13:
                self.state = 169
                self.option()
                self.state = 170
                self.match(ANTLRv4Parser.SEMI)
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 177
            self.match(ANTLRv4Parser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OptionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(ANTLRv4Parser.IdentifierContext, 0)

        def ASSIGN(self):
            return self.getToken(ANTLRv4Parser.ASSIGN, 0)

        def optionValue(self):
            return self.getTypedRuleContext(ANTLRv4Parser.OptionValueContext, 0)

        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_option

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOption"):
                return visitor.visitOption(self)
            else:
                return visitor.visitChildren(self)

    def option(self):

        localctx = ANTLRv4Parser.OptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_option)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.identifier()
            self.state = 180
            self.match(ANTLRv4Parser.ASSIGN)
            self.state = 181
            self.optionValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OptionValueContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ANTLRv4Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(ANTLRv4Parser.IdentifierContext, i)

        def DOT(self, i: int = None):
            if i is None:
                return self.getTokens(ANTLRv4Parser.DOT)
            else:
                return self.getToken(ANTLRv4Parser.DOT, i)

        def STRING_LITERAL(self):
            return self.getToken(ANTLRv4Parser.STRING_LITERAL, 0)

        def actionBlock(self):
            return self.getTypedRuleContext(ANTLRv4Parser.ActionBlockContext, 0)

        def INT(self):
            return self.getToken(ANTLRv4Parser.INT, 0)

        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_optionValue

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOptionValue"):
                return visitor.visitOptionValue(self)
            else:
                return visitor.visitChildren(self)

    def optionValue(self):

        localctx = ANTLRv4Parser.OptionValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_optionValue)
        self._la = 0  # Token type
        try:
            self.state = 194
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9, 13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.identifier()
                self.state = 188
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 71:
                    self.state = 184
                    self.match(ANTLRv4Parser.DOT)
                    self.state = 185
                    self.identifier()
                    self.state = 190
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 191
                self.match(ANTLRv4Parser.STRING_LITERAL)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 192
                self.actionBlock()
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 4)
                self.state = 193
                self.match(ANTLRv4Parser.INT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DelegateGrammarsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(ANTLRv4Parser.IMPORT, 0)

        def delegateGrammar(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ANTLRv4Parser.DelegateGrammarContext)
            else:
                return self.getTypedRuleContext(ANTLRv4Parser.DelegateGrammarContext, i)

        def SEMI(self):
            return self.getToken(ANTLRv4Parser.SEMI, 0)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(ANTLRv4Parser.COMMA)
            else:
                return self.getToken(ANTLRv4Parser.COMMA, i)

        def getRuleIndex(self):
            return ANTLRv4Parser.RULE_delegateGrammars

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDelegateGrammars"):
                return visitor.visitDelegateGrammars(self)
            else:
                return visitor.visitChildren(self)

    def delegateGrammars(self):
